force-app/main/default/objects/Service_Pricing__c/Service_Pricing__c.object-meta.xml
<CustomObject>
    <label>Service Pricing</label>
    <nameField>
        <label>Service Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>