force-app/main/default/objects/Service_Pricing__c/fields/Condition_Group__c.field-meta.xml
<CustomField>
    <fullName>Condition_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition Group</label>
    <referenceTo>Condition_Group__c</referenceTo>
    <relationshipLabel>Service Pricings</relationshipLabel>
    <relationshipName>Service_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>