force-app/main/default/objects/Service_Pricing__c/fields/Pricing_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Name__c</fullName>
    <label>Pricing Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>